k8s/bigmemory/import-orchestrator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: import-orchestrator
  namespace: osm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: import-orchestrator
  template:
    metadata:
      labels:
        app: import-orchestrator
    spec:
      serviceAccountName: import-orchestrator
      nodeSelector:
        osm: "true"
      securityContext:
        fsGroup: 1000
        runAsUser: 1000
      containers:
      - name: import-orchestrator
        image: alpine/k8s:1.30.0
        imagePullPolicy: IfNotPresent
        command: ["/bin/bash", "/scripts/import-orchestrator.sh"]
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
        volumeMounts:
        - name: orchestrator-script
          mountPath: /scripts
        - name: manifests
          mountPath: /manifests
        - name: state
          mountPath: /state
        - name: status-config
          mountPath: /config/status
        - name: nominatim-config
          mountPath: /config/nominatim
        - name: valhalla-config
          mountPath: /config/valhalla
        - name: tileserver-config
          mountPath: /config/tileserver
        - name: data
          mountPath: /mnt/OSM
        - name: temp-data
          mountPath: __OSM_TEMP_DIR__
        - name: ca-certs
          mountPath: /ca-certs
          readOnly: true
      volumes:
      - name: orchestrator-script
        hostPath:
          path: /mnt/OSM/scripts
          type: DirectoryOrCreate
      - name: manifests
        hostPath:
          path: /mnt/OSM/manifests
          type: DirectoryOrCreate
      - name: state
        persistentVolumeClaim:
          claimName: osm-status
      - name: status-config
        configMap:
          name: osm-status-config
      - name: nominatim-config
        configMap:
          name: osm-nominatim-import-config
      - name: valhalla-config
        configMap:
          name: osm-valhalla-import-config
      - name: tileserver-config
        configMap:
          name: osm-tileserver-import-config
      - name: data
        hostPath:
          path: /mnt/OSM
          type: DirectoryOrCreate
      - name: temp-data
        persistentVolumeClaim:
          claimName: osm-temp
      - name: ca-certs
        emptyDir: {}
