k8s/bigmemory/valhalla.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: valhalla
  namespace: osm
  labels:
    app: valhalla
spec:
  replicas: 2
  selector:
    matchLabels:
      app: valhalla
  template:
    metadata:
      labels:
        app: valhalla
    spec:
      nodeSelector:
        osm: "true"
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchLabels:
                  app: valhalla
              topologyKey: topology.kubernetes.io/zone
      containers:
      - name: valhalla
        image: ghcr.io/gis-ops/docker-valhalla/valhalla:latest
        imagePullPolicy: Always
        command: ["/bin/bash", "-c"]
        args:
        - |
          [...]
        resources:
          requests:
            memory: "4Gi"
            cpu: "4"
          limits:
            memory: "16Gi"
            cpu: "8"
        ports:
        - containerPort: 8002
        volumeMounts:
        - name: valhalla-runtime
          mountPath: /custom_files
        - name: valhalla-data
          mountPath: /shared-data
        - name: ca-certs
          mountPath: /ca-certs
          readOnly: true
      volumes:
      - name: valhalla-data
        persistentVolumeClaim:
          claimName: valhalla
      - name: valhalla-runtime
        emptyDir: {}
      - name: valhalla-config
        configMap:
          name: osm-valhalla-config
      - name: ca-certs
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: valhalla
  namespace: osm
spec:
  type: NodePort
  selector:
    app: valhalla
  ports:
  - name: http
    port: 8002
    targetPort: 8002
    nodePort: 30082
